# shards

./: .gitignore  AGENTS.md  CLAUDE.md  CLEANUP_ISSUES.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  TESTING.md
crates/kild/: Cargo.toml
crates/kild-config/: Cargo.toml
crates/kild-config/src/: agent_data.rs  defaults.rs  errors.rs  include_config.rs  lib.rs  loading.rs  types.rs  validation.rs
crates/kild-core/: Cargo.toml
crates/kild-core/src/: lib.rs
crates/kild-core/src/agents/: errors.rs  mod.rs  registry.rs  resume.rs  traits.rs  types.rs
crates/kild-core/src/agents/backends/: amp.rs  mod.rs  opencode.rs
crates/kild-core/src/cleanup/: handler.rs  operations.rs
crates/kild-core/src/config/: defaults.rs  keybindings.rs  loading.rs  mod.rs  types.rs  validation.rs
crates/kild-core/src/daemon/: autostart.rs  client.rs  errors.rs  mod.rs  tofu.rs
crates/kild-core/src/editor/: errors.rs  registry.rs  traits.rs
crates/kild-core/src/editor/backends/: generic.rs  vim.rs  vscode.rs  zed.rs
crates/kild-core/src/errors/: mod.rs
crates/kild-core/src/files/: mod.rs  operations.rs  types.rs
crates/kild-core/src/forge/: errors.rs  mod.rs  registry.rs  traits.rs  types.rs
crates/kild-core/src/forge/backends/: github.rs  mod.rs
crates/kild-core/src/git/: cli.rs  errors.rs  handler.rs  health.rs  mod.rs  naming.rs  operations.rs  overlaps.rs  query.rs  remote.rs  removal.rs  status.rs  test_support.rs  types.rs  validation.rs
crates/kild-core/src/git/status/: commits.rs  stats.rs  tests.rs  worktree.rs
crates/kild-core/src/health/: handler.rs  operations.rs  storage.rs  types.rs
crates/kild-core/src/logging/: mod.rs
crates/kild-core/src/notify/: errors.rs  mod.rs  registry.rs
crates/kild-core/src/notify/backends/: linux.rs
crates/kild-core/src/process/: cleanup.rs  mod.rs  operations.rs  pid_file.rs  types.rs
crates/kild-core/src/projects/: errors.rs  persistence.rs  types.rs
crates/kild-core/src/sessions/: agent_status.rs  attach.rs  complete.rs  create.rs  daemon_helpers.rs  daemon_request.rs  daemon_spawn.rs  destroy.rs  dropbox.rs  env_cleanup.rs  errors.rs  fleet.rs  handler.rs  info.rs  list.rs  mod.rs  open.rs  persistence.rs  ports.rs  stop.rs  store.rs  types.rs  validation.rs
crates/kild-core/src/sessions/persistence/: index.rs  (+5 more)
crates/kild-core/src/state/: commands.rs  dispatch.rs  errors.rs  events.rs  mod.rs  store.rs  types.rs
crates/kild-core/src/terminal/: errors.rs  handler.rs  mod.rs  operations.rs  registry.rs  traits.rs  types.rs
crates/kild-daemon/: Cargo.toml
crates/kild-daemon/src/: errors.rs  lib.rs  main.rs  pid.rs  tls.rs  types.rs
crates/kild-daemon/src/client/: connection.rs  mod.rs  stream.rs
crates/kild-daemon/src/pane_backend/: context.rs  handler.rs  mod.rs  protocol.rs
crates/kild-daemon/src/protocol/: codec.rs  messages.rs  mod.rs  pane_backend.rs
crates/kild-daemon/src/pty/: manager.rs  mod.rs  output.rs
crates/kild-daemon/src/server/: connection.rs  mod.rs  pane_backend.rs  shutdown.rs
crates/kild-daemon/src/session/: manager.rs  mod.rs  state.rs
crates/kild-daemon/tests/: integration.rs
crates/kild-git/: Cargo.toml
crates/kild-git/src/: cli.rs  errors.rs  health.rs  lib.rs  project.rs  query.rs  remote.rs  removal.rs  test_support.rs  types.rs  validation.rs
crates/kild-git/src/status/: commits.rs  mod.rs  stats.rs  tests.rs  worktree.rs
crates/kild-peek-core/: Cargo.toml
crates/kild-peek-core/src/: lib.rs
crates/kild-peek-core/src/assert/: handler.rs  mod.rs  types.rs
crates/kild-peek-core/src/diff/: handler.rs  types.rs
crates/kild-peek-core/src/element/: accessibility.rs  errors.rs  handler.rs  mod.rs  types.rs
crates/kild-peek-core/src/interact/: errors.rs  handler.rs  mod.rs  operations.rs  types.rs
crates/kild-peek-core/src/logging/: mod.rs
crates/kild-peek-core/src/screenshot/: errors.rs  handler.rs
crates/kild-peek-core/src/window/: errors.rs  handler.rs  mod.rs  types.rs
crates/kild-protocol/: Cargo.toml
crates/kild-protocol/src/: client.rs  lib.rs  messages.rs  pool.rs  types.rs
crates/kild-teams/: Cargo.toml
crates/kild-teams/src/: discovery.rs  errors.rs  lib.rs  mapper.rs  parser.rs  scanner.rs  types.rs  watcher.rs
crates/kild-ui/: Cargo.toml
crates/kild-ui/src/: actions.rs  daemon_client.rs  main.rs  projects.rs  refresh.rs  state.rs  theme.rs  theme_bridge.rs  watcher.rs
crates/kild-ui/src/components/: button.rs  mod.rs  modal.rs  status_indicator.rs  text_input.rs
crates/kild-ui/src/state/: app_state.rs  dialog.rs  errors.rs  layout.rs  loading.rs  mod.rs  selection.rs  sessions.rs  teammates.rs  terminals.rs  ui_commands.rs
crates/kild-ui/src/teams/: mod.rs  state.rs
crates/kild-ui/src/terminal/: blink.rs  colors.rs  errors.rs  input.rs  mod.rs  state.rs  terminal_element.rs  terminal_view.rs  types.rs
crates/kild-ui/src/views/: add_project_dialog.rs  confirm_dialog.rs  create_dialog.rs  dashboard_view.rs  detail_panel.rs  detail_view.rs  kild_list.rs  kild_sidebar.rs  main_view.rs  minimized_bar.rs  mod.rs  pane_grid.rs  pane_header.rs  project_rail.rs  project_selector.rs  rail.rs  sidebar.rs  split_pane.rs  status_bar.rs  teammate_tabs.rs  terminal_tabs.rs
crates/kild/src/: app.rs  color.rs  commands.rs  main.rs  table.rs
crates/kild/src/app/: daemon.rs  git.rs  global.rs  misc.rs  mod.rs  project.rs  query.rs  session.rs  tests.rs
crates/kild/src/commands/: agent_status.rs  attach.rs  cd.rs  cleanup.rs  code.rs  commits.rs  complete.rs  create.rs  daemon.rs  destroy.rs  diff.rs  focus.rs  health.rs  helpers.rs  hide.rs  inbox.rs  init_hooks.rs  inject.rs  json_types.rs  list.rs  mod.rs  open.rs  overlaps.rs  pr.rs  prime.rs  project.rs  rebase.rs  restart.rs  stats.rs  status.rs  stop.rs  sync.rs  teammates.rs
crates/kild/tests/: cli_daemon_sessions.rs  cli_json_output.rs  cli_output.rs
crates/shards-ui/: Cargo.toml
crates/shards-ui/src/: actions.rs  main.rs  projects.rs  state.rs
crates/shards-ui/src/views/: confirm_dialog.rs  create_dialog.rs  main_view.rs  mod.rs  project_selector.rs  shard_list.rs
(+383 files in other folders)
