[package]
name = "shards"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18"
portable-pty = "0.8"
open = "5.0"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
toml = "0.8"
dialoguer = "0.11"
