[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Wirasm/SHARDS"

[workspace.dependencies]
# Core dependencies (shared across crates)
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37.2"
toml = "0.8"
git2 = "0.18"
ignore = "0.4"
glob = "0.3"
regex = "1"
linkify = "0.10"
open = "5"
walkdir = "2"
tempfile = "3"
notify = "8.0"
which = "7"
uuid = { version = "1", features = ["v4"] }

# CLI-only dependencies
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4"

# Screenshot and image processing dependencies
xcap = "0.8"
image = "0.25"
image-compare = "0.5"
base64 = "0.22"
bytes = "1"
core-graphics = { version = "0.24", features = ["highsierra"] }
core-foundation = "0.10"
accessibility-sys = "0.2"

# Daemon dependencies
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "signal", "time", "sync", "macros", "fs", "process"] }
portable-pty = "0.8"
alacritty_terminal = "0.25"
vte = "0.15"
futures = "0.3"
smol = "2"
nix = { version = "0.29", features = ["signal", "process", "term", "ioctl"] }
tokio-util = { version = "0.7", features = ["codec"] }

# TLS — opt-in TCP transport for remote daemon access
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
tokio-rustls = "0.26"
futures-rustls = "0.26"
rustls-pemfile = "2"
rustls-pki-types = "1"
rcgen = "0.14"
# ring is lighter than aws-lc-rs; explicit choice to keep compile times manageable
ring = "0.17"

# For TOFU fingerprint comparison
sha2 = "0.10"
hex = "0.4"

# Internal workspace dependencies
kild-config = { path = "crates/kild-config" }
kild-core = { path = "crates/kild-core" }
kild-git = { path = "crates/kild-git" }
kild-daemon = { path = "crates/kild-daemon" }
kild-paths = { path = "crates/kild-paths" }
kild-peek-core = { path = "crates/kild-peek-core" }
kild-protocol = { path = "crates/kild-protocol" }
kild-teams = { path = "crates/kild-teams" }

# UI dependencies
gpui = "0.2"
gpui-component = "0.5.1"
# Pin core-text to 21.0.0 to avoid core_graphics version conflict.
# core-text 21.1.0 pulls in core-graphics 0.25.0, but gpui's font-kit dependency
# requires core-graphics 0.24.0, causing type mismatches at compile time.
core-text = "=21.0.0"
unicode-width = "0.2"
owo-colors = { version = "4", features = ["supports-colors"] }

# Dev/test dependencies
temp-env = "0.3"
paste = "1"
