[package]
name = "kild-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for KILD - parallel AI agent worktree management"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
toml.workspace = true
git2.workspace = true
ignore.workspace = true
tempfile.workspace = true
uuid.workspace = true
which.workspace = true
base64.workspace = true
kild-config.workspace = true
kild-paths.workspace = true
kild-protocol = { workspace = true, features = ["tcp"] }
nix = { workspace = true, features = ["fs"] }

# TLS for TOFU fingerprint verifier and TCP client
rustls = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
temp-env.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
xcap.workspace = true
accessibility-sys.workspace = true
core-foundation.workspace = true
