[package]
name = "kild-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "KILD daemon - PTY ownership, session persistence, IPC server"

[[bin]]
name = "kild-daemon"
path = "src/main.rs"

[dependencies]
kild-core.workspace = true
kild-paths.workspace = true
kild-protocol.workspace = true

# Async runtime
tokio.workspace = true

# Serialization (JSONL protocol)
serde.workspace = true
serde_json.workspace = true

# PTY management
portable-pty.workspace = true

# Logging
tracing.workspace = true

# Signal handling and process management
nix.workspace = true

# Error types
thiserror.workspace = true

# Binary encoding for PTY data
base64.workspace = true

# TOML config parsing
toml.workspace = true

# Timestamps
chrono.workspace = true

# Cancellation token for graceful shutdown
tokio-util.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
