[package]
name = "kild-git"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Git worktree operations and queries for KILD"

[dependencies]
git2.workspace = true
kild-protocol.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
