[package]
name = "kild"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for KILD - manage parallel AI development agents"

[[bin]]
name = "kild"
path = "src/main.rs"

[dependencies]
kild-core.workspace = true
kild-daemon.workspace = true
clap.workspace = true
serde.workspace = true
tracing.workspace = true
serde_json.workspace = true
tokio.workspace = true
base64.workspace = true
nix.workspace = true

[dev-dependencies]
tempfile.workspace = true
