[package]
name = "shards-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GUI for Shards - visual shard management dashboard"

[[bin]]
name = "shards-ui"
path = "src/main.rs"

[dependencies]
shards-core.workspace = true
# NOTE: GPUI dependency commented out due to compilation issues
# gpui.workspace = true  # Waiting for stable GPUI release
